# Airguardian

./: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
app/: celery.py  main.py
app/api/: drones.py  health.py  nfz.py
app/core/: config.py  logger.py
app/db/: base.py  models.py  session.py
app/schemas/: __init__.py  schemas.py
app/tasks/: fetch_and_detect.py
migrations/: env.py
migrations/versions/: 72ffa503a104_init.py  a8a763b272b2_create_violations_and_nfz_active_tables.py
